--- a/_posts/2024-12-11-关于-AI-的一些使用心得.md
+++ b/_posts/2024-12-11-关于-AI-的一些使用心得.md
@@ -10,8 +10,68 @@ tags:
  - Code
 ---
 
-* 目录
-  {:toc}
 
 
+目前 AI 浪潮越发的汹涌澎湃，未来将占据非常重要的地位，拥抱 AI 就是拥抱未来。
+
+如果无法参与 AIGC（Artificial Intelligence Generated Content），那就尽可能地通过 AI 来提升生产力。
+
+
+
+## 代码
+
+#### IDEA 扩展
+
+- **Github Copilot**
+- **通义灵码**
+
+目前只用过这两款，**Github Copilot** 的体验远好于 **通义灵码**，但是一个付费一个免费。
+
+
+
+
+
+## 编辑器
+
+#### Cursor
+
+目前非常火的代码编辑器，与其说代码编辑器，不如说是代码生成器。
+
+内置的 Composer 功能非常强大，只需描述自己的需求，即可生成功能代码，并且质量也比较高，算是个人目前主力编辑器了，但是跟 IDEA 比起来，功能还是不够完善，有些时候还是要搭配 IDEA 来使用。
+
+
+
+
+
+## ChatGPT
+
+[ChatGPT ](https://chatgpt.com/) 是目前排名第一的生成式人工智能，个人目前主力的 Chat 工具，在上下文对话方面比较强大，还有高质量的语音对话。
+
+本文的背景图就是通过 ChatGPT 生成的，很假很好用。
+
+
+
+
+
+## Claude
+
+[Claude](https://claude.ai/) 是目前最强大的代码助手，写代码首选，Cursor 使用的就是 Claude 模型。
+
+但是这个 b 公司可以说是最抠的，我注册帐号后使用了一次就被封号了。
+
+
+
+
+
+## PPT
+
+[Kimi](https://kimi.moonshot.cn/) 是“月之暗面”公司开发的一个 AI 平台，平台内的 **PPT工具** 使用体验非常不错，不管是自定义文本还是网络搜索的内容，套用官方炫酷的模板后，生成的 PPT 非常精美，而且可以自己上传 PPT 模板。
+
+
+
+
+
+## Excel
+
+[ChatExcel](https://chatexcel.com/) 通过 AI 来处理 Excel
 
